Replaced deprecated ctor.